# rdp_monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  env_example
c_ui/: CMakeLists.txt  funcs.c  funcs.h  main.c
py_server/: api.py  database.py  funcs.py  gunicorn_config.py  main.py  requirements.txt  user_data_table.sql  users_table.sql
py_server/models/: user.py
src/: db.rs  general.rs  lib.rs  main.rs  nbt.rs  rdp_data.rs  remote_server.rs  user_history_data.rs
