[package]
name = "nct"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo"] }
colored = "2.0"
ctrlc = "3.4.2"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.108"
chrono = "0.4.34"
mysql = "24.0.0"
rand = "0.8.5"
image = "0.24.9"
csv = "1.3.0"
throbber = "0.1.4"
dotenv = "0.15.0"
qrcode = "0.14.1"
atty = "0.2.14"

